fixed sneaker footer alignment

--- a/app/assets/stylesheets/api/sneakers.scss
+++ b/app/assets/stylesheets/api/sneakers.scss
@@ -49,25 +49,20 @@
 }
 
 .sneaker-footer {
-    // padding-top: 300px;
     font-size: 16px;
     color: grey;
     flex-direction: column;
     position: absolute;
     bottom: 0;
     padding-bottom: 45px;
-    // margin-top: 30px;
-    justify-self: flex-end;
 }
 
 .shoePane-img {
     width: 550px;
-    // margin-bottom: 300px;
 }
 
 .rightShoe-pane {
     display: flex;
-    // font-family: 
     flex-direction: column;
     justify-content: center;
     text-align: center;
@@ -127,8 +122,6 @@
 
 .show-all {
     display: grid;
-    // height: 90vh;
-    // border: 2px solid lightgrey;
     width: 705px;
     margin-right: 400px;
     display: grid;
@@ -164,19 +157,6 @@
     text-decoration: underline;
 }
 
-// .sneakerItem {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: space-evenly;
-//     align-items: center;
-//     height: 350px;
-// }
-
 .sneakerItem img {
     width: 175px;
 }
-
-// .show-all {
-//     // display: inline-flex;
-//     width: 900px;
-// }
